--- a/src/app/countries/countries.component.html
+++ b/src/app/countries/countries.component.html
@@ -17,15 +17,16 @@
       <button mat-raised-button>Submit</button>
       <button mat-raised-button type="button" (click)="resetForm()">Reset</button>
     </div>
-            
-    <mat-card class="example-card" >
+    
+    
+    <mat-card class="example-card" *ngFor="let cardinfo of cardinfos" >
       <mat-card-header>
-        <mat-card-title> {{name}}</mat-card-title>
+        <mat-card-title> {{cardinfo.name}}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
         <p>
           Continent:
-          {{continent}}
+          {{cardinfo.continent}}
         </p>
       </mat-card-content>
       <mat-card-content>
@@ -37,7 +38,7 @@
       <mat-card-content>
         <p>
           Capital:
-          {{capital}}
+          {{cardinfo.capital}}
         </p>
       </mat-card-content>
       <mat-card-content>
