--- a/src/app/countries/countries.component.css
+++ b/src/app/countries/countries.component.css
@@ -1,11 +1,12 @@
 .example-form {
     min-width: 150px;
     max-width: 500px;
-    width: 100%;
+    width: 100%;  
+    height: 100%;
   }
   
   .example-full-width {
-    width: 100%;
+    
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -29,7 +30,7 @@
     margin: 30px;
   }
 
-  .conditions-circle {
+  .conditions-circle-normal {
     font-size: .875rem;
     font-family: 'Roboto', sans-serif;;
     font-weight: 400;
@@ -46,7 +47,40 @@
     margin: 31px 0;
     background: linear-gradient(rgb(9, 176, 198), rgb(147, 193, 36));
   }
-
+  .conditions-circle-cold {
+    font-size: .875rem;
+    font-family: 'Roboto', sans-serif;;
+    font-weight: 400;
+    line-height: 1.5;
+    color: rgba(0,0,0,.87);
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+    border-radius: 50%;
+    position: relative;
+    display: inline-block;
+    width: 190px;
+    height: 190px;
+    margin: 31px 0;
+    background: linear-gradient(rgb(104, 206, 219), rgb(22, 90, 90));
+  }
+  .conditions-circle-hot {
+    font-size: .875rem;
+    font-family: 'Roboto', sans-serif;;
+    font-weight: 400;
+    line-height: 1.5;
+    color: rgba(0,0,0,.87);
+    text-align: center;
+    box-sizing: border-box;
+    padding: 0;
+    border-radius: 50%;
+    position: relative;
+    display: inline-block;
+    width: 190px;
+    height: 190px;
+    margin: 31px 0;
+    background: linear-gradient(rgb(226, 90, 10), rgb(210, 224, 9));
+  }
   .condition-data {
     font-size: .875rem;
     font-family: 'Roboto', sans-serif;;
